Loaded analyzer.js
Added line to load analyzer.js and added the print function to the onclick method for the inspect button.

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -1,6 +1,8 @@
 <DOCTYPE html>
 <html>
 <head runat=server>
+	<script type="text/javascript" src="analyzer.js"></script>
+	
 <title>Text Inspector</title>
 <style type="text/css">
 	body{
@@ -130,6 +132,8 @@
 	</script>
 
 </head>
+	
+	
 <button type="button" class="AboutButton">About</button>
 <h1>Text Inspector</h1>
 <h4>1. Choose a file to analyze or copy and paste the text into the box below.<br/>2. Hit the inspect button to analyze the text.<br/><br/></h4>
@@ -143,7 +147,7 @@
 </label>
 	
 <div class="divider2"></div>
-<button class="AboutButton">Inspect</button>
+<button class="AboutButton" id="inspectButton" onclick=print(" Alex")>Inspect</button>
 <br/><br/>
 <textarea class="inputBox">Paste text here.</textarea>
 <div class="divider"></div>
