added wordCount function

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -129,6 +129,8 @@
         });
 	</script>
 
+
+
 </head>
 <button type="button" class="AboutButton">About</button>
 <h1>Text Inspector</h1>
@@ -145,7 +147,7 @@
 <br/><br/>
 <textarea class="inputBox">Paste text here.</textarea>
 <div class="divider"></div>
-<textarea class="resultBox" readonly></textarea>
+<textarea class="resultBox" id="resultText" readonly></textarea>
 </body>
 </html>
 	</DOCTYPE>
