--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -1,7 +1,7 @@
-<DOCTYPE html>
+<!DOCTYPE html>
+
 <html>
-<head runat=server>
-	<script type="text/javascript" src="analyzer.js"></script>
+<head>
 	
 <title>Text Inspector</title>
 <style type="text/css">
@@ -131,11 +131,70 @@
         });
 	</script>
 
-
-
 </head>
 	
-	
+<body>
+
+<script>
+    var Analyzer = {
+        numWords: 0;
+    var mainText = "This is a test";
+    var words = new Array("none");
+    var topWords = new Array("none");
+
+    readText = function (text) {
+        this.mainText = text;
+    };
+
+    getWords = function () {
+        return words;
+    }
+
+    getMainText = function () {
+		document.getElementByID("resBox").value +=mainText;
+    }
+
+    toString = function () {
+        var returnString = "Text statistics\n\n"
+            + "----------------------------------------------"
+            + "----------------------------------------------\n\n"
+            + "Number of Words: " + numWords + "\n";
+        document.getElementById("")
+    }
+
+    countWords = function () {
+        var num_words = 0;
+        var regex = /\n|\s{2,}/g;
+        var words = mainText.split(regex);
+        var list = [];
+
+        for(var i = 0; i < words.length; i++){
+            var letters = words[i].split("");
+
+            if(letters.length != 0){
+                list.push(words[i]);
+            }
+        }
+
+        words = letters.join();
+        num_words = words.length;
+        return num_words;
+    	}
+    }
+
+    Analyzer.mainText = document.getElementById("inBox").value;
+
+
+</script>
+
+<script>
+    function test() {
+        var mainText = "Alex";
+        document.getElementById("resBox").value += mainText ;
+    }
+</script>
+
+
 <button type="button" class="AboutButton">About</button>
 <h1>Text Inspector</h1>
 <h4>1. Choose a file to analyze or copy and paste the text into the box below.<br/>2. Hit the inspect button to analyze the text.<br/><br/></h4>
@@ -149,15 +208,13 @@
 </label>
 	
 <div class="divider2"></div>
-<button class="AboutButton" id="inspectButton" onclick=print(" Alex")>Inspect</button>
+
+<button class="AboutButton" id="inspectButton" onclick="Analyzer.getMainText()" >Inspect</button>
 <br/><br/>
-<textarea class="inputBox">Paste text here.</textarea>
+<textarea id="inBox" class="inputBox">Paste text here.</textarea>
 <div class="divider"></div>
-<<<<<<< HEAD
-<textarea class="resultBox" id="resultText" readonly></textarea>
-=======
+
 <textarea id="resBox" class="resultBox" readonly></textarea>
->>>>>>> origin/master
 </body>
 </html>
-	</DOCTYPE>
+	</html>
