--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -8,8 +8,23 @@
 <style type="text/css">
 	body{
 		color:white;
+        position: fixed;
+        top:0;
+        bottom:0;
+        left:0;
+        right:0;
 		background-image: url("bookPhoto.png");
+        overflow-y: scroll;
 	}
+
+    html{
+        position: fixed;
+        top:0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        overflow-y: hidden;
+    }
 
 	.buttonStyle{
 		border:none;
@@ -20,6 +35,7 @@
 		text-align: center;
 		text-decoration: none;
 		outline: none;
+        overflow: hidden;
 		color: white;
 		background-color: #607d8b;
 		border: none;
@@ -36,7 +52,7 @@
 	}
 
 	.resultBox{
-		width: 800px;
+		width: 40%;
 		height: 800px;
 		background-color: #263238;
 		color: white;
@@ -45,18 +61,18 @@
 	}
 
 	.inputBox{
-		width: 700px;
+		width: 38%;
 		height: 800px;
 	}
 
 	.divider{
-		width: 350px;
+		width: 18%;
 		height: 10px;
 		display: inline-block;
 	}
 
 	.divider2{
-		width: 365px;
+		width: 20%;
 		height: 10px;
 		display: inline-block;
 	}
@@ -145,11 +161,12 @@
 <script>
 
     var numWords = 0;
-    var mainText = "This is a test";
+    var mainText = "\0";
     var words = new Array("none");
     var topWords = new Array("none");
     var readWords = false;
-    var numCharacters;
+    var numCharacters = 0;
+    var longestWord = "\0";
 
     readText = function (text) {
         mainText = text;
@@ -169,7 +186,8 @@
             + "----------------------------------------------"
             + "--------------------------------------------------\n\n"
             + "Number of Words: " + numWords + "\n"
-            + "Nubmer of Characters: " + numCharacters;
+            + "Number of Characters: " + numCharacters + "\n"
+            + "Longest Word: " + longestWord + "\n";
         return returnString;
     }
 
@@ -179,13 +197,22 @@
         var tmpWords = mainText.match(/\S+/g);
         numCharacters = mainText.split("").length;
         var letters;
+        var lengthCount = 0;
         for(var i = 0; i < tmpWords.length; i++){
             letters = tmpWords[i].split("");
 
             if(letters.length !== 0){
                 numWords++;
                 words.push(tmpWords[i])
+
+                if(letters.length > lengthCount){
+                    lengthCount = letters.length;
+                    longestWord = tmpWords[i];
+                }
+
             }
+
+
         }
 
         if(words.length > 0){
