--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -26,29 +26,40 @@
         overflow-y: hidden;
     }
 
-	.buttonStyle{
+	h1{
+		text-align: center;
+		font-family: Georgia;
+	}
+
+	h3{
+		font-family: Georgia;
+	}
+
+	button{
 		border:none;
 		color: white;
-		padding: 10px 12px;
+		padding: 12px 14px;
 		font-size:12px;
 		cursor: pointer;
 		text-align: center;
 		text-decoration: none;
 		outline: none;
-        overflow: hidden;
-		color: white;
 		background-color: #607d8b;
-		border: none;
 		border-radius: 10px;
 		box-shadow: 0 6px #424242;
+		position: relative;
 	}
 
-	.buttonStyle:hover{ background-color: #78909c }
+	button:hover{ background-color: #78909c }
 
-	.buttonStyle:active{
+	button:active{
 		background-color: #78909c;
 		box-shadow: 0 5px #666;
 		transform: translateY(3px);
+	}
+
+	.buttonDivder{
+		text-align: center;
 	}
 
 	.resultBox{
@@ -58,6 +69,7 @@
 		color: white;
 		opacity: 0.8;
 		border:none;
+		overflow: hidden;
 	}
 
 	.inputBox{
@@ -71,11 +83,6 @@
 		display: inline-block;
 	}
 
-	.divider2{
-		width: 20%;
-		height: 10px;
-		display: inline-block;
-	}
 
     .divider3{
         width: 20px;
@@ -134,29 +141,37 @@
 
 </style>
 
-	<script>
-        var inputs = document.querySelectorAll('.fileInput');
-        Array.prototype.forEach.call(inputs, function (input) {
-            var label = input.nextElementSibling, labelVal = label.innerHTML;
-
-            input.addEventListener('change', function (e) {
-                var fileName = '';
-                if (this.files && this.files.length > 1)
-                    fileName = (this.getAttribute('data-multiple-caption') || '').replace('{count}', this.files.length);
-                else
-                    fileName = e.target.value.split('\\').pop();
-
-                if (fileName)
-                    label.querySelector('span').innerHTML = fileName;
-                else
-                    label.innerHTML = labelVal;
-            });
-        });
-	</script>
-
 </head>
 	
 <body>
+
+<button type="button">About</button>
+<h1>Text Inspector</h1>
+<h3>1. Choose a file to analyze or copy and paste the text into the box below.<br/>2. Hit the inspect button to analyze the text.<br/><br/></h3>
+
+<div class="buttonDivder">
+	<button type="button" id="clearButton" onclick="clearText()">Clear</button>
+	<div class="divider3"></div>
+	<button type="button" id="inspectButton" onclick="inspect()" >Inspect</button>
+</div>
+
+<input type="file" id="fileInput" runat="server" class="inputFile inputFile-1" data-multiple-caption="{count} files selected"/>
+<label for="fileInput">
+	<svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="20" height="17" viewBox="0 0 20 17">
+		<path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"/>
+	</svg>
+	<span>Choose a file</span>
+</label>
+
+
+<br/><br/>
+
+<div class="buttonDivder">
+<textarea id="inBox" class="inputBox">Paste text here.</textarea>
+<div class="divider"></div>
+<textarea id="resBox" class="resultBox" readonly></textarea>
+</div>
+
 
 <script>
 
@@ -167,6 +182,7 @@
     var readWords = false;
     var numCharacters = 0;
     var longestWord = "\0";
+    var inputFiles;
 
     readText = function (text) {
         mainText = text;
@@ -220,7 +236,23 @@
         }
 
 
-    	}
+    }
+
+    var readFile = function () {
+        var fileInput = document.querySelector("#fileInput");
+        var files = fileInput.files;
+
+        var f1 = files.length;
+        var i = 0;
+        var output = document.getElementById("resBox");
+        while (i < f1) {
+            inputFiles = files[i];
+            output.value += inputFiles.name;
+            inputFiles.
+            i++;
+        }
+    }
+
 
     inspect = function () {
         countWords()
@@ -229,34 +261,35 @@
         }
     }
 
-
+    document.querySelector("#fileInput").onchange=readFile;
 
 </script>
 
 
-<button type="button" class="buttonStyle">About</button>
-<h1>Text Inspector</h1>
-<h4>1. Choose a file to analyze or copy and paste the text into the box below.<br/>2. Hit the inspect button to analyze the text.<br/><br/></h4>
+<script>
+    //create a node class to hold each letter
+    function Node(data) {
+        this.data = data;
+        this.isWord = false;
+        this.prefixes = 0;
+        this.children = {};
+    }
 
-<input type="file" id="fileInput" runat="server" class="inputFile inputFile-1" data-multiple-caption="{count} files selected" multiple="multiple" />
-<label for="fileInput">
-	<svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="20" height="17" viewBox="0 0 20 17">
-		<path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"/>
-	</svg>
-	<span>Choose a file</span>
-</label>
+    //create the trie
+    function Trie() {
+        this.root = new Node('');
+    }
 
-<div class="divider2"></div>
-<button class="buttonStyle" id="clearButton" onclick="clearText()">Clear</button>
-<div class="divider3"></div>
+    Trie.prototype.add = function (word) {
+        if(!this.root){
+            return null;
+        }
 
-<button class="buttonStyle" id="inspectButton" onclick="inspect()" >Inspect</button>
-<br/><br/>
 
-<textarea id="inBox" class="inputBox">Paste text here.</textarea>
-<div class="divider"></div>
+    }
+</script>
 
-<textarea id="resBox" class="resultBox" readonly></textarea>
+
 </body>
 </html>
 	</html>
