--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -35,7 +35,7 @@
 		font-family: Georgia;
 	}
 
-	button{
+	.buttons{
 		border:none;
 		color: white;
 		padding: 12px 14px;
@@ -44,15 +44,14 @@
 		text-align: center;
 		text-decoration: none;
 		outline: none;
-		background-color: #607d8b;
-		border-radius: 10px;
-		box-shadow: 0 6px #424242;
+		background-color: #00695c;
+		border-radius: 7px;
 		position: relative;
 	}
 
-	button:hover{ background-color: #78909c }
+	.buttons:hover{ background-color: #78909c }
 
-	button:active{
+	.buttons:active{
 		background-color: #78909c;
 		box-shadow: 0 5px #666;
 		transform: translateY(3px);
@@ -62,14 +61,9 @@
 		text-align: center;
 	}
 
-	.resultBox{
-		width: 40%;
-		height: 800px;
-		background-color: #263238;
-		color: white;
-		opacity: 0.8;
-		border:none;
-		overflow: hidden;
+	.bodyDivder {
+		text-align: center;
+		vertical-align: middle;
 	}
 
 	.inputBox{
@@ -77,10 +71,10 @@
 		height: 800px;
 	}
 
-	.divider{
-		width: 18%;
-		height: 10px;
-		display: inline-block;
+	.dividerSpace{
+		width: 5%;
+		height: 1px;
+		display: inline-table;
 	}
 
 
@@ -139,21 +133,101 @@
 		background-color: #722040;
 	}
 
+	.container th h1{
+		font-weight: bold;
+		font-size: 12px;
+		text-align: left;
+		color: #185875;
+	}
+
+	.container td h3{
+		font-size: 12px;
+		text-align: left;
+		color: #FFFFFF;
+	}
+
+	.container td {
+		font-weight: normal;
+		font-size: 1em;
+		-webkit-box-shadow: 0 2px 2px -2px #0E1119;
+		-moz-box-shadow: 0 2px 2px -2px #0E1119;
+		box-shadow: 0 2px 2px -2px #0E1119;
+	}
+
+	.container{
+		text-align: left;
+		align-content: center;
+		overflow: hidden;
+		width: 35%;
+		margin: 0 auto;
+		display: inline-table;
+		vertical-align: top;
+		padding: 0 0 8em 0;
+	}
+
+	.container td, .container th {
+		padding-bottom: 2%;
+		padding-top: 2%;
+		padding-left: 2%;
+	}
+
+	.container tr:nth-child(odd) {
+		background-color: #00695c;
+	}
+
+	.container tr:nth-child(even) {
+		background-color: #004d40;
+	}
+
+	.container td:first-child{ color: #FB667A;}
+
+	.container tr:hover {
+		background-color: #464A52;
+		-webkit-box-shadow: 0 6px 6px -6px #0E1119;
+		-moz-box-shadow: 0 6px 6px -6px #0E1119;
+		box-shadow: 0 6px 6px -6px #0E1119;
+	}
+
+	.container td:hover {
+		background-color: #FFF842;
+		color: #403E10;
+		font-weight: bold;
+
+		box-shadow: #7F7C21 -1px 1px, #7F7C21 -2px 2px, #7F7C21 -3px 3px, #7F7C21 -4px 4px, #7F7C21 -5px 5px, #7F7C21 -6px 6px;
+		transform: translate3d(6px, -6px, 0);
+
+		transition-delay: 0s;
+		transition-duration: 0.4s;
+		transition-property: all;
+		transition-timing-function: linear;
+	}
+
+	@media (max-width: 800px) {
+		.container td:nth-child(4),
+		.container th:nth-child(4) {display: none; }
+	}
+
 </style>
 
 </head>
 	
 <body>
-<button type="button" onclick="goToAbout()">About</button>
-<h1>Text Inspector</h1>
-<h3>1. Choose a file to analyze or copy and paste the text into the box below.<br/>2. Hit the inspect button to analyze the text.<br/><br/></h3>
 
+<button class="buttons" onclick="goToAbout()">About</button>
+<h1>Text Inspector</h1>
 <div class="buttonDivider">
-	<button type="button" id="clearButton" onclick="clearText()">Clear</button>
-	<div class="divider3"></div>
-	<button type="button" id="inspectButton" onclick="inspect()" >Inspect</button>
+<h3>1. Choose a file to analyze or copy and paste the text into the box below.<br/>2. Hit the inspect button to analyze the text.<br/><br/></h3>
 </div>
 
+<div class="buttonDivider">
+	<button class="buttons" type="button" id="clearButton" onclick="clearText()">Clear</button>
+	<div class="divider3"></div>
+	<button class="buttons" type="button" id="inspectButton" onclick="inspect()" >Inspect</button>
+</div>
+
+<br/><br/>
+
+<div class="buttonDivider">
 <input type="file" id="fileInput" runat="server" class="inputFile inputFile-1" data-multiple-caption="{count} files selected"/>
 <label for="fileInput">
 	<svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="20" height="17" viewBox="0 0 20 17">
@@ -161,15 +235,31 @@
 	</svg>
 	<span>Choose a file</span>
 </label>
-
+</div>
 
 <br/><br/>
 
-<div class="buttonDivider">
+<div class="bodyDivder">
 <textarea id="inBox" class="inputBox">Paste text here.</textarea>
-<div class="divider"></div>
-<textarea id="resBox" class="resultBox" readonly></textarea>
+	<div class="dividerSpace"></div>
+	<table class="container" id="resTable">
+		<tbody>
+		<tr>
+			<td id=""><h3>Number of Words</h3></td>
+			<td id="numWords">---</td>
+		</tr>
+		<tr>
+			<td><h3>Number of Characters</h3></td>
+			<td id="numChar">---</td>
+		</tr>
+		<tr>
+			<td><h3>Longest Word</h3></td>
+			<td id="longWords">---</td>
+		</tr>
+		</tbody>
+	</table>
 </div>
+
 
 <script>
 
@@ -191,7 +281,9 @@
     }
 
     clearText = function(){
-        document.getElementById("resBox").value = "";
+        document.getElementById("resTable").rows[0].cells[1].innerHTML = "---";
+        document.getElementById("resTable").rows[1].cells[1].innerHTML = "---";
+        document.getElementById("resTable").rows[2].cells[1].innerHTML = "---";
     }
 
 
@@ -223,16 +315,13 @@
                     lengthCount = letters.length;
                     longestWord = tmpWords[i];
                 }
-
             }
-
 
         }
 
         if(words.length > 0){
             readWords = true;
         }
-
 
     }
 
@@ -254,7 +343,9 @@
     inspect = function () {
         countWords()
         if(readWords){
-            document.getElementById("resBox").value = toString();
+            document.getElementById("resTable").rows[0].cells[1].innerHTML = numWords;
+            document.getElementById("resTable").rows[1].cells[1].innerHTML = numCharacters;
+            document.getElementById("resTable").rows[2].cells[1].innerHTML = longestWord;
         }
     }
 
