working on adding frequency to trie. Search and add is broken.

--- a/Homepage/home.html
+++ b/Homepage/home.html
@@ -79,7 +79,7 @@
         document.getElementById("resTable").rows[2].cells[1].innerHTML = "---";
     };
 
-    document.querySelector("#fileInput").onchange = readFile;
+    //document.querySelector("#fileInput").onchange = readFile;
 
 </script>
 
