--- a/Homepage/About.html
+++ b/Homepage/About.html
@@ -16,7 +16,7 @@
     <div class="div1">
         <p>Hi name is Alexander Taffe. I am a computer systems engineering student Arizona State University. I made this web page based on a project from my Distributed Software Development
             my class in Spring 2017. We learned using the .NET framework but I wanted to learn HTML, CSS, and Javascript. So I made this website to learn and practice these skills.It is still a work in progress but I will be working on it in the weeks to come.
-            The code is available on my <a href="https://github.com/ataffe/Text-Analyzer">github</a>.<br/><br/> Currently the website provides the following information:</p>
+            The code is available on my <a href="https://github.com/ataffe/Text-Analyzer">github</a>.If you have any suggestions or comments send me an email at: alex@textinspector.org!<br/><br/> Currently the website provides the following functionality:</p>
         <ol>
             <li>Number of words</li>
             <li>Number of characters</li>
@@ -33,6 +33,13 @@
             <li>Graphical representations of data</li>
             <li>number of vowels in each word</li>
         </ul>
+        <br/>
+        <p></p>
+        <br/>
+        <br/>
+        <h3>Updates</h3>
+        <p>8/13/17 <br/><br/>I have an email for the site now! So that is mentioned above. I had to take the GRE so I didn't have time to work on the site but i'm done now and today i'm working on
+        word frequency. So most used word, average used word, least used word, and top 5 used words should be coming soon. Later i'm going to work on a nice graph to display the info in an easier to absorb format.</p><br/><br/>
     </div>
 
 </div>
