--- a/Homepage/home.html
+++ b/Homepage/home.html
@@ -1,88 +1,197 @@
-<!DOCTYPE html>
+/*Images are open source from https://pixabay.com/en/phone-screen-technology-mobile-1052023/ and  */
+body{
+    background-image: url("bookPhoto.png");
+    color:white;
+    /*position: fixed;*/
+    overflow: hidden;
+}
 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="IE=Edge">
-    <title>Text Inspector</title>
-    <script src="analyzer.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="home.css">
-    <link rel="icon" href="MainIcon.ico">
-</head>
-<!-- table from https://codepen.io/anon/pen/dzXeRJ I changed a few things though.-->
-<body>
+html{
+    position: fixed;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow-y: hidden;
+}
 
-<button class="buttons" onclick="goToAbout()">About</button>
-<h1>Text Inspector</h1>
-<div class="buttonDivider">
-    <h3>1. Choose a file to analyze or copy and paste the text into the box below.<br/>2. Hit the inspect button to
-        analyze the text.<br/><br/></h3>
-</div>
+h1{
+    text-align: center;
+    font-family: Georgia, serif;
+}
 
-<div class="buttonDivider">
-    <button class="buttons" type="button" id="clearButton" onclick="clearText()">Clear</button>
-    <div class="divider3"></div>
-    <button class="buttons" type="button" id="inspectButton" onclick="inspect()">Inspect</button>
-</div>
+h3{
+    font-family: Georgia, serif;
+}
 
-<br/><br/>
+.buttons{
+    border:none;
+    color: white;
+    padding: 12px 14px;
+    font-size:12px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    background-color: #00695c;
+    border-radius: 7px;
+    position: relative;
+}
 
-<!--- this isn't working.
-<div class="buttonDivider">
-    <input type="file" id="fileInput" runat="server" class="inputFile inputFile-1" data-multiple-caption="{count} files selected"/>
-    <label for="fileInput">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="20" height="17" viewBox="0 0 20 17">
-            <path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"/>
-        </svg>
-        <span>Choose a file</span>
-    </label>
-</div>
+.buttons:hover{ background-color: #78909c }
 
---->
+.buttons:active{
+    background-color: #78909c;
+    box-shadow: 0 5px #666;
+    transform: translateY(3px);
+}
 
-<br/><br/>
+.buttonDivider{
+    text-align: center;
+}
 
-<div class="bodyDivder">
-    <textarea id="inBox" class="inputBox">Paste text here.</textarea>
-    <div class="dividerSpace"></div>
-    <table class="container" id="resTable">
-        <tbody>
-        <tr>
-            <td id=""><h3>Number of Words</h3></td>
-            <td id="numWords">---</td>
-        </tr>
-        <tr>
-            <td><h3>Number of Characters</h3></td>
-            <td id="numChar">---</td>
-        </tr>
-        <tr>
-            <td><h3>Longest Word(s)</h3></td>
-            <td id="longWords">---</td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+.bodyDivder {
+    text-align: center;
+    vertical-align: middle;
+}
 
-<script>
-    inspect = function () {
-        readWords();
-        if (wordsRead) {
-            document.getElementById("resTable").rows[0].cells[1].innerHTML = numWords;
-            document.getElementById("resTable").rows[1].cells[1].innerHTML = numCharacters;
-            document.getElementById("resTable").rows[2].cells[1].innerHTML = longestWordString;
-        }
-    };
+.inputBox{
+    width: 38%;
+    height: 800px;
+}
 
-    clearText = function () {
-        document.getElementById("resTable").rows[0].cells[1].innerHTML = "---";
-        document.getElementById("resTable").rows[1].cells[1].innerHTML = "---";
-        document.getElementById("resTable").rows[2].cells[1].innerHTML = "---";
-    };
+.dividerSpace{
+    width: 5%;
+    height: 1px;
+    display: inline-table;
+}
 
-    //document.querySelector("#fileInput").onchange = readFile;
 
-</script>
+.divider3{
+    width: 20px;
+    height: 10px;
+    display: inline-block;
+}
 
-</body>
-</html>
 
+.inputFile{
+    width:0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.inputFile + label {
+    font-size: 1.25em;
+    font-weight: 700;
+    color:white;
+    background-color:white;
+    display:inline-block;
+}
+
+.inputFile + label,
+.inputFile + label:hover{
+    background-color:#607d8b;
+}
+
+.inputFile + label{
+    cursor:pointer;
+}
+
+.inputFile:focus + label {
+    outline: 1px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px;
+}
+
+.inputFile-1 + label{
+    color: #ffffff;
+    background-color: #607d8b;
+    width:180px;
+    height:25px;
+    padding-top:10px;
+    padding-bottom:10px;
+    padding-left:10px;
+    border-radius:10px;
+}
+
+.inputFile-1:focus + label,
+.inputFile-1.has-focus + label,
+.inputFile-1 + label:hover {
+    background-color: #722040;
+}
+
+.container th h1{
+    font-weight: bold;
+    font-size: 12px;
+    text-align: left;
+    color: #185875;
+}
+
+.container td h3{
+    font-size: 12px;
+    text-align: left;
+    color: white;[]
+}
+
+.container td {
+    font-weight: normal;
+    font-size: 1em;
+    -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+    -moz-box-shadow: 0 2px 2px -2px #0E1119;
+    box-shadow: 0 2px 2px -2px #0E1119;
+}
+
+.container{
+    text-align: left;
+    align-content: center;
+    overflow: hidden;
+    width: 35%;
+    margin: 0 auto;
+    display: inline-table;
+    vertical-align: top;
+    padding: 0 0 8em 0;
+}
+
+.container td, .container th {
+    padding-bottom: 2%;
+    padding-top: 2%;
+    padding-left: 2%;
+}
+
+.container tr:nth-child(odd) {
+    background-color: #00695c;
+}
+
+.container tr:nth-child(even) {
+    background-color: #004d40;
+}
+
+.container td:first-child{ color: #FB667A;}
+
+.container tr:hover {
+    background-color: #464A52;
+    -webkit-box-shadow: 0 6px 6px -6px #0E1119;
+    -moz-box-shadow: 0 6px 6px -6px #0E1119;
+    box-shadow: 0 6px 6px -6px #0E1119;
+}
+
+.container td:hover {
+    background-color: #FFF842;
+    color: #403E10;
+    font-weight: bold;
+
+    box-shadow: #7F7C21 -1px 1px, #7F7C21 -2px 2px, #7F7C21 -3px 3px, #7F7C21 -4px 4px, #7F7C21 -5px 5px, #7F7C21 -6px 6px;
+    transform: translate3d(6px, -6px, 0);
+
+    transition-delay: 0s;
+    transition-duration: 0.4s;
+    transition-property: all;
+    transition-timing-function: linear;
+}
+
+@media (max-width: 800px) {
+    .container td:nth-child(4),
+    .container th:nth-child(4) {display: none; }
+}
